# ticktick_importer

./: .gitignore  README.md  pyproject.toml
src/: date_utils.py  dynalist_task.py  main.py  ticktick_task.py
src/ticktick_importer/: dynalist_task.py  get_current_date.py  main.py  ticktick_task.py
tests/: test_main.py
tests/data/: dynalist_sample.opml  sample.opml
