[project]
name = "ticktick-importer"
version = "0.1.0"
description = ""
authors = [{ name = "Nacho Caballero", email = "nachocab@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = ["lxml (>=5.3.1,<6.0.0)"]

[tool.poetry]
packages = [{ include = "ticktick_importer", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-vv", "--color=yes"]
pythonpath = ["src"]
testpaths = ["tests"]
